--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <!-- 2nd Row End -->
     </div>
 
-    <div id="favoritesBtn" class=" container pt-4 d-flex justify-content-center" data-bs-toggle="modal" data-bs-target="#favoritesModal">
+    <div id="favoritesBtn" class=" container pt-4 d-flex justify-content-center" data-bs-toggle="modal"
+        data-bs-target="#favoritesModal">
         <p class="my-0 text-center d-flex align-items-center favoritesBtnS bgTransparent RobotoRegularFont"><span
                 class="heart-text sp-icon-open"><img src="./assets/like.png" alt="heart icon" style="height: 20px;">
                 Open Your
@@ -164,11 +165,8 @@
 
 
 
-
-
-
-
-
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
