--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col-5 bgWhite borderRadius me-2">
                 <div class="row ps-4 pt-4">
                     <div class="col">
-                        <h4 id="cityName" class="RobotoLightFont headerText">SAN FRANCISCO</h4>
+                        <h4 id="cityName" class="RobotoLightFont headerText">CITY</h4>
                     </div>
                     <div class="col text-end pe-5">
                         <div><img id="favoritesAddBtn" src="./assets/heart.png" alt="heart icon" style="height: 27px;">
@@ -42,21 +42,21 @@
                     </div>
                 </div>
 
-                <div class="row ps-4">
-                    <div class="col-4 text-end">
-                        <p class="weatherIconFont" id="currentWeatherIcon"></p>
+                <div class="row ps-4 align-items-center" style="height: 250px;">
+                    <div class="col-4 text-center">
+                        <p class="weatherIconFontLarge" id="currentWeatherIcon"></p>
                     </div>
-                    <div class="col-5 text-start">
-                        <h2 class="tempText"><span id="currentTemp">54</span>°F</h2>
+                    <div class="col-7">
+                        <h2 class="tempText"><span id="currentTemp">00</span>°F</h2>
                     </div>
                 </div>
 
                 <div class="row ps-4 belowCityText pt-5 dotted-gradient">
                     <div class="col">
-                        <p id="currentDesc">cloudy</p>
+                        <p id="currentDesc"></p>
                     </div>
                     <div class="col">
-                        <p>H: <span id="currentHigh">72</span>°F L: <span id="currentLow">37</span>°F</p>
+                        <p>H: <span id="currentHigh">00</span>°F L: <span id="currentLow">00</span>°F</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                         <h4 class="RobotoLightFont headerText2">TODAY</h4>
                     </div>
                     <div class="col text-end pe-5">
-                        <p id="time" class="RobotoLightFont headerText2">12:55 PM</p>
+                        <p id="time" class="RobotoLightFont headerText2"></p>
                     </div>
                 </div>
 
@@ -75,17 +75,17 @@
                     <div class="col-4 text-center">
                         <p class="timesText">8am</p>
                         <p class="weatherIconFont" id="morningIcon"></p>
-                        <h2 class="todaysTempsHour"><span id="morningTemp">38</span>°</h2>
+                        <h2 class="todaysTempsHour"><span id="morningTemp">00</span>°</h2>
                     </div>
                     <div class="col-4 text-center left-dotted-gradient">
                         <p class="timesText">noon</p>
                         <p class="weatherIconFont" id="afternoonIcon"></p>
-                        <h2 class="todaysTempsHour"><span id="afternoonTemp">54</span>°</h2>
+                        <h2 class="todaysTempsHour"><span id="afternoonTemp">00</span>°</h2>
                     </div>
                     <div class="col-4 text-center left-dotted-gradient">
                         <p class="timesText">8pm</p>
                         <p class="weatherIconFont" id="nightIcon"></p>
-                        <h2 class="todaysTempsHour"><span id="nightTemp">58</span>°</h2>
+                        <h2 class="todaysTempsHour"><span id="nightTemp">00</span>°</h2>
                     </div>
                 </div>
             </div>
@@ -96,34 +96,34 @@
     <div class="container mt-3" style="width: 79%;">
         <div class="row d-flex justify-content-center RobotoLightFont">
             <div class="col-2 pt-4 pb-3 text-center borderRadius bgTransparent mx-2">
-                <h5 id="dateDayOne" class="fiveDayText">TUE 12/8</h5>
+                <h5 id="dateDayOne" class="fiveDayText"></h5>
                 <p class="weatherIconFont" id="dayOneIcon"></p>
-                <p class="RobotoRegularFont fiveDayTemp"><span id="dayOneHigh">74</span>°F | <span
-                        id="dayOneLow">34</span>°F</p>
+                <p class="RobotoRegularFont fiveDayTemp"><span id="dayOneHigh">00</span>°F | <span
+                        id="dayOneLow">00</span>°F</p>
             </div>
             <div class="col-2 pt-4 text-center borderRadius bgTransparent me-2">
-                <h5 id="dateDayTwo" class="fiveDayText">WED 12/9</h5>
+                <h5 id="dateDayTwo" class="fiveDayText"></h5>
                 <p class="weatherIconFont" id="dayTwoIcon"></p>
-                <p class="RobotoRegularFont fiveDayTemp"><span id="dayTwoHigh">74</span>°F | <span
-                        id="dayTwoLow">34</span>°F</p>
+                <p class="RobotoRegularFont fiveDayTemp"><span id="dayTwoHigh">00</span>°F | <span
+                        id="dayTwoLow">00</span>°F</p>
             </div>
             <div class="col-2 pt-4 text-center borderRadius bgTransparent me-2">
-                <h5 id="dateDayThree" class="fiveDayText">THU 12/10</h5>
+                <h5 id="dateDayThree" class="fiveDayText"></h5>
                 <p class="weatherIconFont" id="dayThreeIcon"></p>
-                <p class="RobotoRegularFont fiveDayTemp"><span id="dayThreeHigh">74</span>°F | <span
-                        id="dayThreeLow">34</span>°F</p>
+                <p class="RobotoRegularFont fiveDayTemp"><span id="dayThreeHigh">00</span>°F | <span
+                        id="dayThreeLow">00</span>°F</p>
             </div>
             <div class="col-2 pt-4 text-center borderRadius bgTransparent me-2">
-                <h5 id="dateDayFour" class="fiveDayText">FRI 12/11</h5>
+                <h5 id="dateDayFour" class="fiveDayText"></h5>
                 <p class="weatherIconFont" id="dayFourIcon"></p>
-                <p class="RobotoRegularFont fiveDayTemp"><span id="dayFourHigh">74</span>°F | <span
-                        id="dayFourLow">34</span>°F</p>
+                <p class="RobotoRegularFont fiveDayTemp"><span id="dayFourHigh">00</span>°F | <span
+                        id="dayFourLow">00</span>°F</p>
             </div>
             <div class="col-2 pt-4 text-center borderRadius bgTransparent me-2">
-                <h5 id="dateDayFive" class="fiveDayText">SAT 12/12</h5>
+                <h5 id="dateDayFive" class="fiveDayText"></h5>
                 <p class="weatherIconFont" id="dayFiveIcon"></p>
-                <p class="RobotoRegularFont fiveDayTemp"><span id="dayFiveHigh">74</span>°F | <span
-                        id="dayFiveLow">34</span>°F</p>
+                <p class="RobotoRegularFont fiveDayTemp"><span id="dayFiveHigh">00</span>°F | <span
+                        id="dayFiveLow">00</span>°F</p>
             </div>
         </div>
         <!-- 2nd Row End -->
@@ -161,8 +161,6 @@
             </div>
         </div>
     </div>
-
-
 
 
     <!-- Include jQuery -->
