EOD 12_8 clean up

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col-4 text-center">
                         <p class="weatherIconFontLarge" id="currentWeatherIcon"></p>
                     </div>
-                    <div class="col-7">
+                    <div class="col-7 text-end">
                         <h2 class="tempText"><span id="currentTemp">00</span>°F</h2>
                     </div>
                 </div>
